# ffmpeg-sample

./: README.md
cpp-demo/: CMakeLists.txt  main.cpp  safe_queue.h
ffmpeg_advanced_api/: CMakeLists.txt  main-demuxer-muxer.c  main-io.c  main-seek-file.c  main.c  main_write.c  text.cpp  text.h
ffmpeg_base_api/: CMakeLists.txt  main.c
ffmpeg_demo/: CMakeLists.txt  main.c
ffmpeg_filter/: CMakeLists.txt  main-overplay.c  main-scale.c  main-split-overlay.c  main-sws-scale.c  main.c
ffmpeg_out_file/: CMakeLists.txt  main.c
video-audio-demo/: CMakeLists.txt  main-cpp.cpp
video-demo/: CMakeLists.txt  extr_audio.c  main.c  remuxing.c
